--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     <p>Phone: (954)551-3052</p><br>
                     <p>Email: jettdembin96@gmail.com</p><br><br>
                     <h4>Resume</h4><br>
-                    <a href="finalresume.html">
+                    <a href="resume.html">
                         <i class="far fa-file-alt"></i>
                     </a>
                 </div>
