--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <h2>About Me.</h2>
         <div class="about-wrapper">
             <div class="about">
-                <p>Graduated from University of Central Florida with a B.S. in Integrated Business. Once I entered the real world, I realized that I should follow a career at which I love. I am currently employed as a customer service agent for Eagleview, where I have been working almost since graduation in last May.</p>
+                <p>I graduated from University of Central Florida with a B.S. in Integrated Business.<br><br>Once I entered the real world, I realized that I should follow a career at which I find truly fascinating. Consequently, as I am currently employed as a customer service agent for Eagleview, I spend most of my free time learning code in absolutely any way I can.<br>
+                    <br>I am currently self taught, and I have studied Vanilla Javascript, Python, HTML5, and CSS3, all in the past 5 months.<br><br></p>
             </div>
         </div>
     </div>
