--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="card">
                 <div class="image-top"></div>
             <!--<img src="images/pro.jpg" class="image-top">-->
-                <img src="images/headshot.jpg" class="profile-image" height="22">
+                <img src="images/profilepic.jpg" class="profile-image" height="22">
                 <h1 class="fullname">Jett Dembin</h1>
                 <p class="job">Web Developer</p>
                 <p class="about-me"></p>
