--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="about-wrapper">
             <div class="about">
                 <p>I graduated from University of Central Florida with a B.S. in Integrated Business.<br><br>Once I entered the real world, I realized that I should follow a career at which I find truly fascinating. Consequently, as I am currently employed as a customer service agent for Eagleview, I spend most of my free time learning code in absolutely any way I can.<br>
-                    <br>I am currently self taught, and I have studied Vanilla Javascript, Python, HTML5, and CSS3, all in the past 5 months.<br><br></p>
+                    <br>I am currently self taught, and I have studied Vanilla Javascript, HTML5, and CSS3, all in the past 6 months.<br><br></p>
             </div>
         </div>
     </div>
